# MAI_OS_labs

./: CMakeLists.txt  README.md
KP/: CMakeLists.txt  main.cpp
KP/doc/: kp.tex
KP/include/: FBLAllocator.hpp  MCKAllocator.hpp
KP/src/: FBLAllocator.cpp  MCKAllocator.cpp
lab1/: CMakeLists.txt  main.cpp
lab1/doc/: lab1.tex
lab1/include/: parent.hpp
lab1/src/: lower.cpp  parent.cpp  underscore.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/doc/: lab2.tex
lab2/include/: timsort.hpp
lab2/src/: timsort.cpp
lab3/: CMakeLists.txt
lab3/doc/: lab3.tex
lab3/include/: parent.hpp  utils.hpp
lab3/src/: lower.cpp  parent.cpp  underscore.cpp  utils.cpp
lab4/: CMakeLists.txt  main_dynamic.cpp  main_static.cpp
lab4/doc/: lab4.tex
lab4/include/: lib.hpp
lab4/src/: lib1.cpp  lib2.cpp
lab5-7/: CMakeLists.txt
lab5-7/doc/: lab5-7.tex
lab5-7/include/: node.hpp
lab5-7/src/: calculate.cpp  control.cpp  node.cpp  socket.cpp
lab8/doc/: lab8.tex
tests/: CMakeLists.txt  lab1_test.cpp  lab2_test.cpp  lab3_test.cpp  lab5-7_test.cpp
tests/lab1_test/: CMakeLists.txt  lab1_test.cpp  test3_res.txt  test3_src.txt
